--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Gaurav's bloG
+email: dimpu47@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  This blog displays thoughts, opinions and resources about various interests and topics of blog author
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://gaurawesome.ga" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: gkztweet
+github_username:  dimpu47
 
 # Build settings
 markdown: kramdown
