--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Gaurav's bloG
 email: dimpu47@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This blog displays thoughts, opinions and resources about various interests and topics of blog author
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "http://gaurawesome.ga" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: gkztweet
 github_username:  dimpu47
 
