--- a/config.toml
+++ b/config.toml
@@ -1,30 +1,81 @@
-baseurl = "https://dimpu47.github.io/"
-# builddrafts = false
-title = "My New Hugo Site"
-theme = "cocoa"
-languageCode = "en-us"
-author = "Gaurav Choudhary"
-contentdir = "content"
-layoutdir = "layouts"
-publishdir = "public"
-pygmentsuseclasses = true
-builddrafts = false
-canonifyurls = true
+baseurl             = "https://you.github.io/"
+builddrafts         = false
+canonifyurls        = true
+contentdir          = "content"
+languageCode        = "en-US"
+layoutdir           = "layouts"
+publishdir          = "public"
+theme               = "cocoa"
+author              = "Gaurav Choudhary"
+title               = "Gaurverb"
+pygmentsuseclasses  = true
+disqusshortname     = "gaurverb" # Comment out to disable Disqus.
 pluralizelisttitles = false
-canonifyURLs = true
+googleAnalytics     = "UA-123-45"
+
 [permalinks]
-fixed = ":title/"
-blog = "blog/:slug/"
+blog  = "blog/:slug/"
+
+[[menu.main]]
+name                   = "Blog"
+weight                 = -120
+identifier             = "blog"
+url                    = "/blog/"
+
+[[menu.main]]
+name                   = "About"
+weight                 = -110
+identifier             = "about"
+url                    = "/about/"
+
+[[menu.main]]
+name                   = "Code"
+weight                 = -100
+identifier             = "code"
+url                    = "/code/"
 
 [params]
-author = "Gaurav Choudhary"
-email = "dimpu47@gmail.com"
-faviconfile = "img/favicon.ico"
-github = "//github.com/dimpu47"
-highlightjs = true
-linkedin = "//linkedin.com/in/gaurawesome"
-extracssfiles = [ "/css/override.css" ] # In your `static/css`, add/remove files as necessary
-dateform = "Jan 2, 2006"
-dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description = "Don't panic"
-lang = "en"
+include_rss            = true                          # include RSS <link> tag in <head> and show RSS icon
+latestpostscount       = 5                             # how many posts to display on the home page
+i18n_flags             = false                         # whether to display small country flags for available translations
+author                 = "Gaurav Choudhary"
+cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
+dateform               = "Jan 2, 2006"
+dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
+description            = "Don't panic"
+email                  = "you@example.space"
+extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
+faviconfile            = "img/leaf.ico"
+github                 = "//github.com/dimpu47"
+# instagram              = "//instagram.com/you"
+# px500                  = "//500px.com/username"
+lang                   = "en"
+linkedin               = "//linkedin.com/in/gaurawesome"
+noshowreadtime         = false                         # if true, don't show "<x> minutes read" in posts
+selfintro              = ""                            # appears in the site header when set to a non-empty string
+twitter                = "//twitter.com/dimpu47"
+# mastodon               = "//example.com/@you"
+# telegram               = "//t.me/you"
+
+highlightjs            = true
+# highlightjslanguages = ["go"]                        # additional languages not included in the "common" set
+# highlightjsStyle     = "darcula"
+
+piwik                  = false                         # If true, Piwik integration is enabled
+# piwik_url            = "//www.example.com/piwik/"    # URL to your Piwik installation. Must End with a slash
+# piwik_id             = 2                             # Id of your site in Piwik
+
+gitalk                 = false
+# if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
+gitalk_clientID        = "your client id"
+gitalk_clientSecret    = "your client secret"
+gitalk_repo            = "your repo url"
+gitalk_owner           = "the owner of this repo"
+gitalk_admin           = ['a', 'list', 'of', 'administrator']
+
+avatar                 = "img/profile.png" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
+# gravatar             = ""                # gravatar hash. see https://en.gravatar.com/site/implement/hash/. do not use in the same time as avatar
+
+# The following are DEPRECATED.
+gatracker              = "XYZ" # use googleAnalytics instead
+initials               = "ad"  # displayed on single post page; deprecated in v0.3.0.
