--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = public
 	url = https://github.com/dimpu47/dimpu47.github.io.git
 	branch = master
+[submodule "themes/hermit"]
+	path = themes/hermit
+	url = https://github.com/Track3/hermit.git
