--- a/config.toml
+++ b/config.toml
@@ -1,81 +1,163 @@
-baseurl             = "https://dimpu47.github.io/"
-builddrafts         = false
-canonifyurls        = true
-contentdir          = "content"
-languageCode        = "en-US"
-layoutdir           = "layouts"
-publishdir          = "public"
-theme               = "cocoa"
-author              = "Gaurav Choudhary"
-title               = "Gaurverb"
-pygmentsuseclasses  = true
-# disqusshortname     = "gaurverb" # Comment out to disable Disqus.
-pluralizelisttitles = true
-googleAnalytics     = "UA-123-45"
+# baseurl             = "https://dimpu47.github.io/"
+# builddrafts         = false
+# canonifyurls        = true
+# contentdir          = "content"
+# languageCode        = "en-US"
+# layoutdir           = "layouts"
+# publishdir          = "public"
+# theme               = "cocoa"
+# author              = "Gaurav Choudhary"
+# title               = "Gaurverb"
+# pygmentsuseclasses  = true
+# # disqusshortname     = "gaurverb" # Comment out to disable Disqus.
+# pluralizelisttitles = true
+# googleAnalytics     = "UA-123-45"
 
-[permalinks]
-blog  = "blog/:slug/"
+# [permalinks]
+# blog  = "blog/:slug/"
 
-[[menu.main]]
-name                   = "Blog"
-weight                 = -120
-identifier             = "blog"
-url                    = "/blog/"
+# [[menu.main]]
+# name                   = "Blog"
+# weight                 = -120
+# identifier             = "blog"
+# url                    = "/blog/"
 
-[[menu.main]]
-name                   = "About"
-weight                 = -110
-identifier             = "about"
-url                    = "/about/"
+# [[menu.main]]
+# name                   = "About"
+# weight                 = -110
+# identifier             = "about"
+# url                    = "/about/"
 
-[[menu.main]]
-name                   = "Code"
-weight                 = -100
-identifier             = "code"
-url                    = "/code/"
+# [[menu.main]]
+# name                   = "Code"
+# weight                 = -100
+# identifier             = "code"
+# url                    = "/code/"
+
+# [params]
+# include_rss            = true                          # include RSS <link> tag in <head> and show RSS icon
+# latestpostscount       = 5                             # how many posts to display on the home page
+# i18n_flags             = false                         # whether to display small country flags for available translations
+# author                 = "Gaurav Choudhary"
+# cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
+# dateform               = "Jan 2, 2006"
+# dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
+# description            = "Don't panic"
+# email                  = "you@example.space"
+# extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
+# faviconfile            = "img/leaf.ico"
+# github                 = "//github.com/dimpu47"
+# # instagram              = "//instagram.com/you"
+# # px500                  = "//500px.com/username"
+# lang                   = "en"
+# linkedin               = "//linkedin.com/in/gaurawesome"
+# noshowreadtime         = false                         # if true, don't show "<x> minutes read" in posts
+# selfintro              = ""                            # appears in the site header when set to a non-empty string
+# twitter                = "//twitter.com/dimpu47"
+# # mastodon               = "//example.com/@you"
+# # telegram               = "//t.me/you"
+
+# highlightjs            = true
+# # highlightjslanguages = ["go"]                        # additional languages not included in the "common" set
+# # highlightjsStyle     = "darcula"
+
+# piwik                  = false                         # If true, Piwik integration is enabled
+# # piwik_url            = "//www.example.com/piwik/"    # URL to your Piwik installation. Must End with a slash
+# # piwik_id             = 2                             # Id of your site in Piwik
+
+# gitalk                 = false
+# # if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
+# gitalk_clientID        = "your client id"
+# gitalk_clientSecret    = "your client secret"
+# gitalk_repo            = "your repo url"
+# gitalk_owner           = "the owner of this repo"
+# gitalk_admin           = ['a', 'list', 'of', 'administrator']
+
+# avatar                 = "img/profile.gif" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
+# # gravatar             = ""                # gravatar hash. see https://en.gravatar.com/site/implement/hash/. do not use in the same time as avatar
+
+# # The following are DEPRECATED.
+# gatracker              = "XYZ" # use googleAnalytics instead
+# initials               = "ad"  # displayed on single post page; deprecated in v0.3.0.
+
+baseURL = "https://dimpu47.github.io"
+languageCode = "en-us"
+defaultContentLanguage = "en"
+title = "Gaurav's Shit Load of Crap!"
+theme = "hermit"
+# enableGitInfo = true
+pygmentsCodefences  = true
+pygmentsUseClasses  = true
+# hasCJKLanguage = true  # If Chinese/Japanese/Korean is your main content language, enable this to make wordCount works right.
+rssLimit = 10  # Maximum number of items in the RSS feed.
+copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/functions/emojify/
+# googleAnalytics = "UA-123-45"
+# disqusShortname = "yourdiscussshortname"
+
+[author]
+  name = "Gaurav Choudhary"
+
+[blackfriday]
+  # hrefTargetBlank = true
+  # noreferrerLinks = true
+  # nofollowLinks = true
+
+[taxonomies]
+  tag = "tags"
+  # Categories are disabled by default.
 
 [params]
-include_rss            = true                          # include RSS <link> tag in <head> and show RSS icon
-latestpostscount       = 5                             # how many posts to display on the home page
-i18n_flags             = false                         # whether to display small country flags for available translations
-author                 = "Gaurav Choudhary"
-cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
-dateform               = "Jan 2, 2006"
-dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
-description            = "Don't panic"
-email                  = "you@example.space"
-extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
-faviconfile            = "img/leaf.ico"
-github                 = "//github.com/dimpu47"
-# instagram              = "//instagram.com/you"
-# px500                  = "//500px.com/username"
-lang                   = "en"
-linkedin               = "//linkedin.com/in/gaurawesome"
-noshowreadtime         = false                         # if true, don't show "<x> minutes read" in posts
-selfintro              = ""                            # appears in the site header when set to a non-empty string
-twitter                = "//twitter.com/dimpu47"
-# mastodon               = "//example.com/@you"
-# telegram               = "//t.me/you"
+  dateform        = "Jan 2, 2006"
+  dateformShort   = "Jan 2"
+  dateformNum     = "2006-01-02"
+  dateformNumTime = "2006-01-02 15:04 -0700"
 
-highlightjs            = true
-# highlightjslanguages = ["go"]                        # additional languages not included in the "common" set
-# highlightjsStyle     = "darcula"
+  # Metadata mostly used in document's head
+  # description = ""
+  # images = [""]
+  themeColor = "#494f5c"
 
-piwik                  = false                         # If true, Piwik integration is enabled
-# piwik_url            = "//www.example.com/piwik/"    # URL to your Piwik installation. Must End with a slash
-# piwik_id             = 2                             # Id of your site in Piwik
+  homeSubtitle = ""
+  footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+  # bgImg = ""  # Homepage background-image URL
 
-gitalk                 = false
-# if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
-gitalk_clientID        = "your client id"
-gitalk_clientSecret    = "your client secret"
-gitalk_repo            = "your repo url"
-gitalk_owner           = "the owner of this repo"
-gitalk_admin           = ['a', 'list', 'of', 'administrator']
+  # Prefix of link to the git commit detail page. GitInfo must be enabled.
+  # gitUrl = "https://github.com/username/repository/commit/"
 
-avatar                 = "img/profile.gif" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
-# gravatar             = ""                # gravatar hash. see https://en.gravatar.com/site/implement/hash/. do not use in the same time as avatar
+  # Toggling this option needs to rebuild SCSS, requires Hugo extended version
+  justifyContent = true  # Set "text-align: justify" to `.content`.
 
-# The following are DEPRECATED.
-gatracker              = "XYZ" # use googleAnalytics instead
-initials               = "ad"  # displayed on single post page; deprecated in v0.3.0.
+  # Add custom css
+  # customCSS = ["css/foo.css", "css/bar.css"]
+
+  # Social Icons
+  # Check https://github.com/Track3/hermit#social-icons for more info.
+  [[params.social]]
+    name = "twitter"
+    url = "https://twitter.com/dimpu47"
+
+  [[params.social]]
+    name = "email"
+    url = "dimpu47@gmail.com"
+
+  [[params.social]]
+    name = "github"
+    url = "https://github.com/dimpu47"
+
+[menu]
+
+  [[menu.main]]
+    name = "Posts"
+    url = "posts/"
+    weight = 10
+  
+  [[menu.main]]
+    name = "Code"
+    url = "code/"
+    weight = 30
+
+  [[menu.main]]
+    name = "About"
+    url = "about-hugo/"
+    weight = 20
