--- a/config.toml
+++ b/config.toml
@@ -80,84 +80,152 @@
 # gatracker              = "XYZ" # use googleAnalytics instead
 # initials               = "ad"  # displayed on single post page; deprecated in v0.3.0.
 
-baseURL = "https://dimpu47.github.io"
-languageCode = "en-us"
-defaultContentLanguage = "en"
-title = "gaurolog"
-theme = "hermit"
-# enableGitInfo = true
-pygmentsCodefences  = true
-pygmentsUseClasses  = true
-# hasCJKLanguage = true  # If Chinese/Japanese/Korean is your main content language, enable this to make wordCount works right.
-rssLimit = 10  # Maximum number of items in the RSS feed.
-copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
-enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/functions/emojify/
-# googleAnalytics = "UA-123-45"
-# disqusShortname = "yourdiscussshortname"
+# baseURL = "https://dimpu47.github.io"
+# languageCode = "en-us"
+# defaultContentLanguage = "en"
+# title = "gaurolog"
+# theme = "hermit"
+# # enableGitInfo = true
+# pygmentsCodefences  = true
+# pygmentsUseClasses  = true
+# # hasCJKLanguage = true  # If Chinese/Japanese/Korean is your main content language, enable this to make wordCount works right.
+# rssLimit = 10  # Maximum number of items in the RSS feed.
+# copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+# enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/functions/emojify/
+# # googleAnalytics = "UA-123-45"
+# # disqusShortname = "yourdiscussshortname"
 
-[author]
-  name = "Gaurav Choudhary"
+# [author]
+#   name = "Gaurav Choudhary"
 
-[blackfriday]
-  # hrefTargetBlank = true
-  # noreferrerLinks = true
-  # nofollowLinks = true
+# [blackfriday]
+#   # hrefTargetBlank = true
+#   # noreferrerLinks = true
+#   # nofollowLinks = true
+
+# [taxonomies]
+#   tag = "tags"
+#   # Categories are disabled by default.
+
+# [params]
+#   dateform        = "Jan 2, 2006"
+#   dateformShort   = "Jan 2"
+#   dateformNum     = "2006-01-02"
+#   dateformNumTime = "2006-01-02 15:04 -0700"
+
+#   # Metadata mostly used in document's head
+#   # description = ""
+#   # images = [""]
+#   themeColor = "#494f5c"
+
+#   homeSubtitle = "gaurav's gibble-gabble."
+#   footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
+#   # bgImg = ""  # Homepage background-image URL
+
+#   # Prefix of link to the git commit detail page. GitInfo must be enabled.
+#   # gitUrl = "https://github.com/username/repository/commit/"
+
+#   # Toggling this option needs to rebuild SCSS, requires Hugo extended version
+#   justifyContent = true  # Set "text-align: justify" to `.content`.
+
+#   # Add custom css
+#   # customCSS = ["css/foo.css", "css/bar.css"]
+
+#   # Social Icons
+#   # Check https://github.com/Track3/hermit#social-icons for more info.
+#   [[params.social]]
+#     name = "twitter"
+#     url = "https://twitter.com/dimpu47"
+
+#   # [[params.social]]
+#   #   name = "email"
+#   #   url = "dimpu47@gmail.com"
+
+#   [[params.social]]
+#     name = "github"
+#     url = "https://github.com/dimpu47"
+
+# [menu]
+
+#   [[menu.main]]
+#     name = "Posts"
+#     url = "posts/"
+#     weight = 10
+  
+#   [[menu.main]]
+#     name = "Code"
+#     url = "code/"
+#     weight = 30
+
+#   [[menu.main]]
+#     name = "About"
+#     url = "about/"
+#     weight = 20
+
+baseurl = "https://dimpu47.github.io"
+languageCode = "en"
+title = "Gaurav's Weblog"
+theme = "kiss"
+copyright = "&copy; <a href=\"https://github.com/dimpu47\">Gaurav Choudhary</a> 2017"
+disqusShortname = "shortname"
+googleAnalytics = ""
+Paginate = 5 # Number of posts per page
+enableRobotsTXT = true
+
+[params.rss] # Adding this tag enables RSS feed
+includeContent = true # Includes whole content in rss
+authorName = "Gaurav Choudhary" # Author full name
+authorEmail = "dimpu47@gmail.com" # Author email
+
+[params.assets]
+customCSS = ["css/custom.css"]
+
+[params.info]
+adsense = "" # Adsense ID (ID only, without ca-pub-)
+enableSocial = true # Adds OpenGraph and Twitter cards
+homeTitle = "" # Title for home page
+poweredby = true # Adds powered by hugo and kiss below Copyright
+related = true # Includes related articles at the bottom of the article
+codeCopy = true # Add copy button above code blocks
+taxonomiesCount = true # Add taxonomies count
+
+[params.features]
+disqusOnDemand = true  # Load Disqus comments on click
+
+
+[params.opengraph.facebook]
+admins = [] # array of Facebook IDs
+appID = ""
+pageID = ""
+
+[params.opengraph.twitter]
+page = "" # Twitter Page username. If not set, params.social.twitter will be used.
+
+[params.social]
+twitter = "dimpu47"
+github = "dimpu47"
+email = "dimpu47@gmail.com"
+linkedin = "gaurawesome"
+facebook = "dimpu47"
+instagram = ""
+codepen = ""
+rss = "index.xml" # Add this to show RSS button in social.
+
+[params.social.config]
+platforms = ["github","facebook","twitter","instagram","email","codepen","linkedin"]
+
+[params.matomoAnalytics]
+siteID = 1
+rootURL = "//matomo.example.com/"
+
+[params.fathomAnalytics]
+rootURL = "//fathom.example.com/"
+
+[params.hotjarAnalytics]
+hjid = 1
 
 [taxonomies]
-  tag = "tags"
-  # Categories are disabled by default.
+tag ="tags"
 
-[params]
-  dateform        = "Jan 2, 2006"
-  dateformShort   = "Jan 2"
-  dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04 -0700"
-
-  # Metadata mostly used in document's head
-  # description = ""
-  # images = [""]
-  themeColor = "#494f5c"
-
-  homeSubtitle = "gaurav's gibble-gabble."
-  footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-  # bgImg = ""  # Homepage background-image URL
-
-  # Prefix of link to the git commit detail page. GitInfo must be enabled.
-  # gitUrl = "https://github.com/username/repository/commit/"
-
-  # Toggling this option needs to rebuild SCSS, requires Hugo extended version
-  justifyContent = true  # Set "text-align: justify" to `.content`.
-
-  # Add custom css
-  # customCSS = ["css/foo.css", "css/bar.css"]
-
-  # Social Icons
-  # Check https://github.com/Track3/hermit#social-icons for more info.
-  [[params.social]]
-    name = "twitter"
-    url = "https://twitter.com/dimpu47"
-
-  # [[params.social]]
-  #   name = "email"
-  #   url = "dimpu47@gmail.com"
-
-  [[params.social]]
-    name = "github"
-    url = "https://github.com/dimpu47"
-
-[menu]
-
-  [[menu.main]]
-    name = "Posts"
-    url = "posts/"
-    weight = 10
-  
-  [[menu.main]]
-    name = "Code"
-    url = "code/"
-    weight = 30
-
-  [[menu.main]]
-    name = "About"
-    url = "about/"
-    weight = 20
+[blackfriday]
+hrefTargetBlank = true
